# drf-project

./: .gitignore  coverage.txt  env.sample  pyproject.toml
config/: settings.py  urls.py
lms/: models.py  serializers.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_alter_lesson_video.py  0003_lesson_course.py  0004_course_owner_lesson_owner.py
users/: models.py  permissions.py  serializers.py  services.py  tests.py  urls.py  views.py
users/fixtures/: payments.json
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_user_is_active.py  0004_user_is_staff_user_is_superuser.py  0005_remove_user_is_staff_remove_user_is_superuser.py  0006_user_date_joined_user_first_name_user_groups_and_more.py  0007_subscription.py  0008_alter_subscription_options_payment_link_and_more.py
