[project]
name = "drf-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Ксения Рип",email = "ksucha.18.94@gmail.comProfile image"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=6.0.6,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "black (>=26.5.1,<27.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "django-filter (>=25.2,<26.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
